check_errors.txt
    Checking game-time-tracker v0.1.0 (C:\home\code\game-time-tracker)
error[E0277]: `(dyn for<'a> FnOnce(&'a mut eframe::EventLoopBuilder<eframe::UserEvent>) + 'static)` cannot be sent between threads safely
   --> src\ui.rs:180:24
    |
180 |       std::thread::spawn(move || {
    |  _____------------------_^
    | |     |
    | |     required by a bound introduced by this call
181 | |         let result = eframe::run_native(
182 | |             "Game Time Tracker",
183 | |             options,
...   |
192 | |     });
    | |_____^ `(dyn for<'a> FnOnce(&'a mut eframe::EventLoopBuilder<eframe::UserEvent>) + 'static)` cannot be sent between threads safely
    |
    = help: the trait `Send` is not implemented for `(dyn for<'a> FnOnce(&'a mut eframe::EventLoopBuilder<eframe::UserEvent>) + 'static)`
    = note: required for `Unique<(dyn for<'a> FnOnce(&'a mut eframe::EventLoopBuilder<eframe::UserEvent>) + 'static)>` to implement `Send`
note: required because it appears within the type `Box<(dyn for<'a> FnOnce(&'a mut eframe::EventLoopBuilder<eframe::UserEvent>) + 'static)>`
   --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\alloc\src\boxed.rs:234:12
note: required because it appears within the type `Option<Box<dyn FnOnce(&mut EventLoopBuilder<UserEvent>)>>`
   --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\core\src\option.rs:600:10
note: required because it appears within the type `NativeOptions`
   --> C:\Users\joao\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\eframe-0.30.0\src\epi.rs:257:12
    |
257 | pub struct NativeOptions {
    |            ^^^^^^^^^^^^^
note: required because it's used within this closure
   --> src\ui.rs:180:24
    |
180 |     std::thread::spawn(move || {
    |                        ^^^^^^^
note: required by a bound in `spawn`
   --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\std\src\thread\functions.rs:125:1
    = note: the full name for the type has been written to 'C:\home\code\game-time-tracker\target\debug\deps\game_time_tracker-3c71cf4dcd3ce6e1.long-type-11283999743156360149.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: use parentheses to call this trait object
    |
192 |     }(/* &mut eframe::EventLoopBuilder<eframe::UserEvent> */));
    |      ++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0277]: `(dyn FnOnce(ViewportBuilder) -> ViewportBuilder + 'static)` cannot be sent between threads safely
   --> src\ui.rs:180:24
    |
180 |       std::thread::spawn(move || {
    |  _____------------------_^
    | |     |
    | |     required by a bound introduced by this call
181 | |         let result = eframe::run_native(
182 | |             "Game Time Tracker",
183 | |             options,
...   |
192 | |     });
    | |_____^ `(dyn FnOnce(ViewportBuilder) -> ViewportBuilder + 'static)` cannot be sent between threads safely
    |
    = help: the trait `Send` is not implemented for `(dyn FnOnce(ViewportBuilder) -> ViewportBuilder + 'static)`
    = note: required for `Unique<(dyn FnOnce(ViewportBuilder) -> ViewportBuilder + 'static)>` to implement `Send`
note: required because it appears within the type `Box<(dyn FnOnce(ViewportBuilder) -> ViewportBuilder + 'static)>`
   --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\alloc\src\boxed.rs:234:12
note: required because it appears within the type `std::option::Option<Box<(dyn FnOnce(ViewportBuilder) -> ViewportBuilder + 'static)>>`
   --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\core\src\option.rs:600:10
note: required because it appears within the type `NativeOptions`
   --> C:\Users\joao\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\eframe-0.30.0\src\epi.rs:257:12
    |
257 | pub struct NativeOptions {
    |            ^^^^^^^^^^^^^
note: required because it's used within this closure
   --> src\ui.rs:180:24
    |
180 |     std::thread::spawn(move || {
    |                        ^^^^^^^
note: required by a bound in `spawn`
   --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\std\src\thread\functions.rs:125:1
help: use parentheses to call this trait object
    |
192 |     }(/* ViewportBuilder */));
    |      +++++++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `game-time-tracker` (bin "game-time-tracker") due to 2 previous errors
